# uie-api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/: app.py  main.py
src/routers/uie/: mod.py  service.py
