[project]
name = "uie-api"
version = "0.0.1"
description = "paddlenlp uie web api"
authors = [
    {name = "sovlookup", email = "gonorth@qq.com"},
]
dependencies = [
    "paddlenlp>=2.3.3",
    "paddlepaddle>=2.3.0",
    "setuptools>=62.6.0",
    "fastapi>=0.78.0",
    "uvicorn[standard]>=0.18.2",
]
requires-python = ">=3.8"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm.scripts]
dev = "uvicorn app:app --reload"
start = "python src/main.py"
pkg = "pyinstaller -D main.spec"
create_venv = "pdm venv create 3.8"
activate_venv = "pdm venv activate in-project"
prepare = {composite = ["create_venv", "activate_venv", "pdm install"]}
dist = "qpt -f ./src -p ./src/main.py -s ./out"

[tool.pdm.dev-dependencies]
dist = [
    "qpt>=1.0b4.dev1",
]
